1. Introducing some tests 2. Error notifications 3. Loading spinner 4. Home page search results looking more like the layout guidelines 5. ESlint

--- a/static/css/modules/home/Home.scss
+++ b/static/css/modules/home/Home.scss
@@ -3,6 +3,7 @@
 
 .container {
 
+  height: 100vh;
   padding-top: 24px;
 
   .logo {
@@ -61,7 +62,6 @@
 
     .question {
       @extend %R3R;
-      width: 325px;
     }
 
     .proposal {
